# smolGPT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: get_data.sh  reuse_model.py  tokenizer.py  train.py  train_bigram.py  train_tokenizer.py  train_transformer.py
configs/: BPE.yaml  basic.yaml  generate.yaml  instruct.yaml
smolgpt/data/: data_module.py  instruct_data_module.py  instruct_dataset.py  text_dataset.py  user_prompt_dataset.py
smolgpt/model/: attention_head.py  block.py  feed_forward.py  multi_head_attention.py  transformer.py
smolgpt/tokenizer/: ascii_tokenizer.py  bpe_tokenize.py  bpe_tokenizer.py  tokenizer.py
smolgpt/utils/: custom_callback.py
tests/data/: test_user_prompt_dataset.py
tests/tokenizer/: test_bpe_tokenizer.py  test_pbe_tokenizer.py
