[tool.poetry]
name = "smolgpt"
version = "0.1.0"
description = ""
authors = ["aygalic <aygalic@hotmail.fr>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
lightning = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
unittest2 = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."