[tool.poetry]
name = "smolgpt"
version = "0.1.0"
description = ""
authors = ["aygalic <aygalic@hotmail.fr>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
lightning = {extras = ["pytorch-extra"], version = "^2.4.0"}
datasets = "^3.2.0"
tqdm = "^4.67.1"
bitsandbytes = "0.42.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
unittest2 = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."